# Elderly_Monitoring_System

./: .env.example  .gitignore  API_DOCUMENTATION.md  APP_FRONTEND_ANALYSIS.md  ASSIGNMENT3_FULL_DETAILS.md  ASSIGNMENT3_REPORT.md  BACKEND_ANALYSIS.md  CAPROVER_CICD.md  FRONTEND_ANALYSIS.md  Procfile  README.md  README_pipeline.md  STRESS_REPORTS.md  git_commit.py  main.py  pyproject.toml  remove_cache.sh  render.yaml  requirements.txt  run_log2.txt
.github/workflows/: deploy-backend.yml
app_frontend/: README.md  pubspec.yaml
app_frontend/test/: widget_test.dart
app_frontend/web/: index.html  manifest.json
docs/: ARCHITECTURE.md
flask_backend/: Dockerfile  Procfile  README.md  __init__.py  captain-definition  requirements.txt  run.py
flask_backend/app/: __init__.py  auth_jwt.py  auth_service.py  (+12 more)
models/: inference_manifest.json
scripts/: app_integration.py  baseline_models_comparison.py  comparison_study.py  data_utils.py  evaluation.py  feature_extraction.py  modeling.py  preprocessing.py  report_generation.py  run_pipeline.py  temporal_modeling.py
src/: dataset_builder.py  eda.py  evaluation.py  features.py  loader.py  model.py  preprocessing.py  requirements.txt
submission/: .gitignore  README.md  Report.md  _new_main_block.py  check.txt  debug_log.txt  debug_runner.py  import_check.txt  main.py  run_log.txt  run_log2.txt  splice_main.py
tests/: conftest.py  test_fall_detection_fall_type_models.py  test_feature_dimensions.py  test_motion_artifacts.py
web_frontend/: Dockerfile  README.md  captain-definition  package-lock.json  package.json
(+70 files in other folders)
