[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safestep-backend"
version = "0.1.0"
description = "SafeStep AI FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["flask_backend*"]
